--- a/templates/user/shop/shop.html
+++ b/templates/user/shop/shop.html
@@ -61,7 +61,7 @@
                             <figure class="product-media">
                                 <span class="product-label label-new">New</span>
                                 <a href="{% url "productshow" c.variant.product.id c.variant.id %}">
-                                    <img src="{{ c.imgae.url }}" alt="Product image" class="product-image">
+                                    <img src="{{ c.image.url }}" alt="Product image" class="product-image">
                                 </a>
 
                                 <div class="product-action-vertical">
@@ -71,14 +71,20 @@
                                 <div class="product-action action-icon-top">
                                     <input readonly class='mtext-104 cl3 txt-center num-product' type='hidden' name='num-product' value='1' id='qty-input'>
                                     <input type='hidden' value='{{ c.variant.size.id }} id='size-i'>
-                                    <a href="" data-product-id={{ c.variant.id }} class="btn-product btn-cart"><span>add to cart</span></a>
+                                    <a href="" data-product-id={{ c.variant.id }} class="btn-product add-to-cart-btn"><span>add to cart</span></a>
                                 </div><!-- End .product-action -->
                             </figure><!-- End .product-media -->
 
                             <div class="product-body">
                 
                                 <h3 class="product-title"><a href="{% url "productshow" c.variant.product.id c.variant.id %}">{{ c.variant.product.product_name }}</a></h3><!-- End .product-title -->
-                                {% if c.variant.product.offer %}
+                                
+                                <div class="product-price">
+                                    ₹{{ c.variant.product.product_price }}  <span style="color: black;"></span>
+                                </div><!-- End .product-price -->
+
+
+                                {% comment %} {% if c.variant.product.offer %}
                                 <div class="product-price">
                                     <del style="color:rgb(97, 97, 226);">₹{{ c.variant.product.product_price }}</del>  <span style="color:white;"></span> <span style="color: black;">₹ {{ c.variant.product.product_price | sub:c.variant.product.offer.discount_amount }}</span>
                                 </div><!-- End .product-price -->
@@ -86,7 +92,7 @@
                                 <div class="product-price">
                                     <del style="color:rgb(97, 97, 226);">₹{{ c.variant.product.product_price }}</del>  <span style="color:white;">--</span> <span style="color: black;"></span>
                                 </div><!-- End .product-price -->
-                                {% endif %}
+                                {% endif %} {% endcomment %}
 
                                 <div class="ratings-container">
                                     <div class="ratings">
@@ -139,101 +145,156 @@
         </div><!-- End .container -->
     </div><!-- End .page-content -->
 </main><!-- End .main -->
-
-
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>
-    $('.btn-cart').click(function (e){
-        e.preventDefault();
-
-        var product_id= $(this).data('product_id');
-        var add_qty = $('#qty_input').val();
-        var add_size =$('#size-input').val();
-
-        console.log(product_id,add_qty,add_size,'kkkkkkkkkkkkk')
-        $.ajax({
-            method:'POST',
-            url:"{% url 'addcart' %}",
-            data:{
-                'variant_id':product_id,
-                'add_size':add_size,
-                'add_qty':add_qty,
-                csrfmiddlewaretoken:'{{ csrf_token }}'   
-            },
-            success:  function (response){
-                console.log(response);
-
-                if (response.status ==='No such product found' || response.status==='Only few quantity available' || response.status === 'Product already in cart' ){
-                    swal.fire("Error", response.status,"error");
-                    $('.cartdata').load(location.href + ".cartdata");
-                } 
-                else if(response.status ==== 'Product added successfully'){
-                    swal.fire("",response.status,"success");
-                    $('.cartdata').load(location.href + " .cartdata");
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        $('.add-to-cart-btn').click(function (e) {
+            e.preventDefault();
+    
+            var product_id = $(this).data('product_id');
+            var add_qty = $('#qty-input').val();
+            var add_size = $('#size-input').val();
+    
+            // var cart_qty = $('#pro_qty' + product_id).val();  
+            console.log(product_id, add_qty,add_size, 'yyyyyyyyyyyyyyyyyyyyyyy1')
+            $.ajax({
+                method: "POST",
+                url: "{% url 'addcart' %}",
+                data: {
+    
+                    'variant_id': product_id,
+                    'add_size':add_size,
+                    'add_qty': add_qty,
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
+                },
+                success: function (response) {
+    
+                    console.log(response);
+    
+    
+    
+                    if (response.status === 'No such prodcut found' || response.status === 'Only few quantity available' || response.status === 'Product already in cart' ) {
+                        swal.fire("Error!", response.status, "error");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } else if (response.status === 'Product added successfully') { 
+                        swal.fire("", response.status, "success");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } else if (response.status === 'you are not login please Login to continue') {
+                        swal.fire("", response.status, "warning");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } 
+                    else if (response.status === 'Sorry! this variant not available') {
+                        swal.fire("", response.status, "warning");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } 
+                    else {
+                        swal("Error!", response.status, "error");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    }
                 }
-                else if (response.status=== 'You are not login please Login to continue'){
-                    swal.fire("",response.status, "warning");
-                    $('.cartdata').load(location.href + " .cartdata");
-                }
-                else if (response.status === 'Sorry this variant is not available'){
-                    swal.fire("",response.status, "warning")
-                }
-                else{
-                    swal("Error",response.status,"error");
-                    $('.cartdata').load(location.href + " .cartdata")
-                }
+            });
+        });
+    </script> 
 
-            }
-        })
-    })
-</script>
+
+    <script>
+        $('.wish-list').click(function (e) {
+            e.preventDefault();
+    
+            var product_id = $(this).data('product_id');
+            var add_size = $('select[name="size"]').val();
+    
+            console.log(product_id,add_size, 'yyyyyyyyyyyyyyyyyyyyyyy1')
+            $.ajax({
+                method: "POST",
+                url: "{% url 'add_wishlist1' %}",
+                data: {
+    
+                    'variant_id': product_id,
+                    'add_size':add_size,
+                 
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
+                },
+                success: function (response) {
+    
+                    console.log(response);
+    
+                    if (response.status === 'No such prodcut found' || response.status === 'Only few quantity available' || response.status === 'Product already in Wishlist' ) {
+                        swal.fire("Error!", response.status, "error");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } else if (response.status === 'Product added successfully in Wishlist') { 
+                        swal.fire("", response.status, "success");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } else if (response.status === 'you are not login please Login to continue') {
+                        swal.fire("", response.status, "warning");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } 
+                    else if (response.status === 'Sorry! this variant not available') {
+                        swal.fire("", response.status, "warning");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } 
+                    else {
+                        swal("Error!", response.status, "error");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    }
+                }
+            });
+        });
+    </script>
+
+
+
+
+
 
 {% comment %} wishlist ajax {% endcomment %}
 
-<script>
-    $('.wish-list').click(function (e){
-        e.preventDefault();
+    {% comment %} <script>
+        $('.wish-list').click(function (e){
+            e.preventDefault();
 
-        var product_id= $(this).data('product_id');
-        var add_size =$('#size-input').val();
+            var product_id= $(this).data('product_id');
+            var add_size =$('#size-input').val();
 
-        console.log(product_id,add_size,'9999999999999999')
-        $.ajax({
-            method:'POST',
-            url:"{% url 'add_wishlist1' %}",
-            data:{
-                'variant_id':product_id,
-                'add_size':add_size,.
-                csrfmiddlewaretoken:'{{ csrf_token }}'   
-            },
-            success:  function (response){
-                console.log(response);
+            console.log(product_id,add_size,'9999999999999999')
+            $.ajax({
+                method:'POST',
+                url:"{% url 'add_wishlist1' %}",
+                data:{
+                    'variant_id':product_id,
+                    'add_size':add_size,.
+                    csrfmiddlewaretoken:'{{ csrf_token }}'   
+                },
+                success:  function (response){
+                    console.log(response);
 
-                if (response.status ==='No such product found' || response.status==='Only few quantity available' || response.status === 'Product already in wishlist' ){
-                    swal.fire("Error", response.status,"error");
-                    $('.cartdata').load(location.href + ".cartdata");
-                } 
-                else if(response.status ==== 'Product added successfully in wishlist'){
-                    swal.fire("",response.status,"success");
-                    $('.cartdata').load(location.href + " .cartdata");
-                }
-                else if (response.status=== 'You are not login please Login to continue'){
-                    swal.fire("",response.status, "warning");
-                    $('.cartdata').load(location.href + " .cartdata");
-                }
-                else if (response.status === 'Sorry this variant is not available'){
-                    swal.fire("",response.status, "warning")
-                }
-                else{
-                    swal("Error",response.status,"error");
-                    $('.cartdata').load(location.href + " .cartdata")
-                }
+                    if (response.status ==='No such product found' || response.status === 'Only few quantity available' || response.status === 'Product already in wishlist' ){
+                        swal.fire("Error", response.status,"error");
+                        $('.cartdata').load(location.href + ".cartdata");
+                    } 
+                    else if(response.status ==== 'Product added successfully in wishlist'){
+                        swal.fire("",response.status,"success");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    }
+                    else if (response.status=== 'You are not login please Login to continue'){
+                        swal.fire("",response.status, "warning");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    }
+                    else if (response.status === 'Sorry this variant is not available'){
+                        swal.fire("",response.status, "warning")
+                    }
+                    else{
+                        swal("Error",response.status,"error");
+                        $('.cartdata').load(location.href + " .cartdata")
+                    }
 
-            }
+                }
+            })
         })
-    })
-</script>
+    </script> {% endcomment %}
+
+
+
 
 
 <!-- Add this before the closing </body> tag of your HTML -->
